@@ -1,0 +1,5 @@
+# $NetBSD: Makefile,v 1.1 2008/10/30 00:27:31 joerg Exp $
+
+SUBDIR+=	ipw2100 ipw2200
+
+.include <bsd.subdir.mk>
