@@ -1,0 +1,10 @@
+# $NetBSD: Makefile,v 1.1 2008/10/30 00:27:31 joerg Exp $
+
+NOMAN=	# define
+
+FILES=	dist/LICENSE dist/ipw2100-1.2-i.fw dist/ipw2100-1.2-p.fw \
+	dist/ipw2100-1.2.fw
+
+FILESDIR=	/libdata/firmware/if_ipw
+
+.include <bsd.files.mk>
